--- a/notebooks/LSE_DS105A_W08_lecture.ipynb
+++ b/notebooks/LSE_DS105A_W08_lecture.ipynb
@@ -154,7 +154,14 @@
     "\n",
     "2. Modify the columns so that, in the end, they have the data types listed above. Try to deal with any errors that may arise.\n",
     "\n",
-    "3. Once you solved the errors, go to issue [#1](https://github.com/lse-ds105/w08-imdb-data/issues/1)(https://github.com/lse-ds105/w08-imdb-data/issues/1) that I created in this repository and add your group's solution. (add your group's name)"
+    "3. Once you solved the errors, go to issue [#1](https://github.com/lse-ds105/w08-imdb-data/issues/1)(https://github.com/lse-ds105/w08-imdb-data/issues/1) that I created in this repository and add your group's solution. (add your group's name)\n",
+    "\n",
+    "\n",
+    "💡 Tips (if stuck):\n",
+    "\n",
+    "- Look back at your W07 lab notebook to remember how to change data types.\n",
+    "- If you get an error, try to understand what it means.\n",
+    "- If you need to replace the contents of a column in pandas, you can use the `df[\"column_name\"] = ...` syntax."
    ]
   },
   {
