🎯 Add a few more action points

--- a/notebooks/LSE_DS105A_W08_lecture.ipynb
+++ b/notebooks/LSE_DS105A_W08_lecture.ipynb
@@ -172,6 +172,65 @@
    "source": [
     "# Add your code here"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Part 2: 📊 Exploring the data\n",
+    "\n",
+    "(This is also an 🎯 **ACTION POINT**)\n",
+    "\n",
+    "Let's pose a few questions to the data:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Q:** Summarise: how many people recorded in this dataset are alive, and how many are dead?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Your answer here"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Q:** Focusing on those who are dead, calculate their `age_at_death` (in years) as a separate column. Then plot a histogram of the ages at death."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Your answer here"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Q:** Does the average age at death vary according to the profession?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Your answer here"
+   ]
   }
  ],
  "metadata": {
