🔃 Create a PART3 that requires merging data sources

--- a/notebooks/LSE_DS105A_W08_lecture.ipynb
+++ b/notebooks/LSE_DS105A_W08_lecture.ipynb
@@ -188,7 +188,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Q:** Summarise: how many people recorded in this dataset are alive, and how many are dead?"
+    "**Q1:** Summarise: how many people recorded in this dataset are alive, and how many are dead?"
    ]
   },
   {
@@ -204,7 +204,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Q:** Focusing on those who are dead, calculate their `age_at_death` (in years) as a separate column. Then plot a histogram of the ages at death."
+    "**Q2:** Focusing on those who are dead, calculate their `age_at_death` (in years) as a separate column. Then, plot a histogram of the ages at death. What is the most common age at death?"
    ]
   },
   {
@@ -220,7 +220,59 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Q:** Does the average age at death vary according to the profession?"
+    "**Q3:** How many primary professions does each person have? Plot a bar chart of the number of professions per person."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Your answer here"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Q4:** Did those with acting roles die younger or older than those with other roles?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Your answer here"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Part 3: 🔃 Data from multiple sources\n",
+    "\n",
+    "(This is also an 🎯 **ACTION POINT**)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This time, you are asked to complement `df_name_basics` from the IMDb dataset with data from another dataset, `df_title_basics`, which contains information about the titles in which each person has participated.\n",
+    "\n",
+    "\n",
+    "**Step 1:** Add a dict column to the `df_name_basics` indicating the genres of the titles in which each person has participated. The dict should have the following format:\n",
+    "\n",
+    "```python\n",
+    "{\n",
+    "    \"genre_1\": count_of_titles_in_genre_1,\n",
+    "    \"genre_2\": count_of_titles_in_genre_2,\n",
+    "    ...\n",
+    "}\n",
+    "```"
    ]
   },
   {
@@ -228,9 +280,21 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
-    "# Your answer here"
+    "**Q5:** Focusing on just **movies**, what is the average age of actors in their first movie? What is the average age of actors during their last recorded movie?"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -249,7 +313,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.8"
+   "version": "3.10.10"
   }
  },
  "nbformat": 4,
